Updated all notebooks for the multiindex dataframe

--- a/notebooks/2MDM-scan-parameters.ipynb
+++ b/notebooks/2MDM-scan-parameters.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-31T14:45:32.917617Z",
@@ -90,12 +90,14 @@
     "#Merge with SModelS DataFrame\n",
     "pclFile = '../data/smodels_results.pcl'\n",
     "dataDF = pd.read_pickle(pclFile)\n",
+    "# Keep just one entry per filename (ignore multiplicity due to experimental results)\n",
+    "dataDF = dataDF.groupby(level='filename').head(1)\n",
     "print(len(dataDF))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:55.971431Z",
@@ -108,7 +110,28 @@
     {
      "data": {
       "text/plain": [
-       "['filename',\n",
+       "['maxcond',\n",
+       " 'theory prediction (fb)',\n",
+       " 'upper limit (fb)',\n",
+       " 'expected upper limit (fb)',\n",
+       " 'TxNames',\n",
+       " 'Mass (GeV)',\n",
+       " 'AnalysisID',\n",
+       " 'DataSetID',\n",
+       " 'AnalysisSqrts (TeV)',\n",
+       " 'lumi (fb-1)',\n",
+       " 'dataType',\n",
+       " 'r',\n",
+       " 'r_expected',\n",
+       " 'Width (GeV)',\n",
+       " 'TxNames weights (fb)',\n",
+       " 'nll',\n",
+       " 'nll_min',\n",
+       " 'nll_SM',\n",
+       " 'Total xsec for missing topologies (fb)',\n",
+       " 'Total xsec for missing topologies with displaced decays (fb)',\n",
+       " 'Total xsec for missing topologies with prompt decays (fb)',\n",
+       " 'Total xsec for topologies outside the grid (fb)',\n",
        " 'mass.9000006',\n",
        " 'mass.9900026',\n",
        " 'mass.9900032',\n",
@@ -134,7 +157,6 @@
        " 'BRs.sd.W-,W+',\n",
        " 'BRs.sd.higgs,higgs',\n",
        " 'BRs.sd.Z,Z',\n",
-       " 'BRs.sd.t-,t+',\n",
        " 'BRs.sd.chi,chi',\n",
        " 'BRs.sd.ta+,ta-',\n",
        " 'BRs.zp.chi,chi',\n",
@@ -142,233 +164,12 @@
        " 'BRs.zp.q,q',\n",
        " 'BRs.zp.b,b',\n",
        " 'BRs.zp.t-,t+',\n",
+       " 'BRs.sd.t-,t+',\n",
        " 'totalxsec13TeV(fb)',\n",
-       " 'totalxsec8TeV(fb)',\n",
-       " 'CombinedRes',\n",
-       " 'Total xsec for missing topologies (fb)',\n",
-       " 'Total xsec for missing topologies with displaced decays (fb)',\n",
-       " 'Total xsec for missing topologies with prompt decays (fb)',\n",
-       " 'Total xsec for topologies outside the grid (fb)',\n",
-       " 'OutputStatus.sigmacut',\n",
-       " 'OutputStatus.minmassgap',\n",
-       " 'OutputStatus.maxcond',\n",
-       " 'OutputStatus.ncpus',\n",
-       " 'OutputStatus.model',\n",
-       " 'OutputStatus.promptwidth',\n",
-       " 'OutputStatus.stablewidth',\n",
-       " 'OutputStatus.eraseprompt',\n",
-       " 'OutputStatus.checkinput',\n",
-       " 'OutputStatus.doinvisible',\n",
-       " 'OutputStatus.docompress',\n",
-       " 'OutputStatus.computestatistics',\n",
-       " 'OutputStatus.testcoverage',\n",
-       " 'OutputStatus.combinesrs',\n",
-       " 'OutputStatus.combineanas',\n",
-       " 'OutputStatus.reportallsrs',\n",
-       " 'OutputStatus.experimentalfeatures',\n",
-       " 'OutputStatus.file status',\n",
-       " 'OutputStatus.decomposition status',\n",
-       " 'OutputStatus.warnings',\n",
-       " 'OutputStatus.input file',\n",
-       " 'OutputStatus.database version',\n",
-       " 'OutputStatus.smodels version',\n",
-       " 'ExptRes.result0.maxcond',\n",
-       " 'ExptRes.result0.theory prediction (fb)',\n",
-       " 'ExptRes.result0.upper limit (fb)',\n",
-       " 'ExptRes.result0.expected upper limit (fb)',\n",
-       " 'ExptRes.result0.TxNames',\n",
-       " 'ExptRes.result0.Mass (GeV)',\n",
-       " 'ExptRes.result0.AnalysisID',\n",
-       " 'ExptRes.result0.DataSetID',\n",
-       " 'ExptRes.result0.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result0.lumi (fb-1)',\n",
-       " 'ExptRes.result0.dataType',\n",
-       " 'ExptRes.result0.r',\n",
-       " 'ExptRes.result0.r_expected',\n",
-       " 'ExptRes.result0.Width (GeV)',\n",
-       " 'ExptRes.result0.TxNames weights (fb).TRV1jj',\n",
-       " 'ExptRes.result1.maxcond',\n",
-       " 'ExptRes.result1.theory prediction (fb)',\n",
-       " 'ExptRes.result1.upper limit (fb)',\n",
-       " 'ExptRes.result1.expected upper limit (fb)',\n",
-       " 'ExptRes.result1.TxNames',\n",
-       " 'ExptRes.result1.Mass (GeV)',\n",
-       " 'ExptRes.result1.AnalysisID',\n",
-       " 'ExptRes.result1.DataSetID',\n",
-       " 'ExptRes.result1.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result1.lumi (fb-1)',\n",
-       " 'ExptRes.result1.dataType',\n",
-       " 'ExptRes.result1.r',\n",
-       " 'ExptRes.result1.r_expected',\n",
-       " 'ExptRes.result1.Width (GeV)',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result1.nll',\n",
-       " 'ExptRes.result1.nll_min',\n",
-       " 'ExptRes.result1.nll_SM',\n",
-       " 'ExptRes.result2.maxcond',\n",
-       " 'ExptRes.result2.theory prediction (fb)',\n",
-       " 'ExptRes.result2.upper limit (fb)',\n",
-       " 'ExptRes.result2.expected upper limit (fb)',\n",
-       " 'ExptRes.result2.TxNames',\n",
-       " 'ExptRes.result2.Mass (GeV)',\n",
-       " 'ExptRes.result2.AnalysisID',\n",
-       " 'ExptRes.result2.DataSetID',\n",
-       " 'ExptRes.result2.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result2.lumi (fb-1)',\n",
-       " 'ExptRes.result2.dataType',\n",
-       " 'ExptRes.result2.r',\n",
-       " 'ExptRes.result2.r_expected',\n",
-       " 'ExptRes.result2.Width (GeV)',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result2.nll',\n",
-       " 'ExptRes.result2.nll_min',\n",
-       " 'ExptRes.result2.nll_SM',\n",
-       " 'ExptRes.result3.maxcond',\n",
-       " 'ExptRes.result3.theory prediction (fb)',\n",
-       " 'ExptRes.result3.upper limit (fb)',\n",
-       " 'ExptRes.result3.expected upper limit (fb)',\n",
-       " 'ExptRes.result3.TxNames',\n",
-       " 'ExptRes.result3.Mass (GeV)',\n",
-       " 'ExptRes.result3.AnalysisID',\n",
-       " 'ExptRes.result3.DataSetID',\n",
-       " 'ExptRes.result3.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result3.lumi (fb-1)',\n",
-       " 'ExptRes.result3.dataType',\n",
-       " 'ExptRes.result3.r',\n",
-       " 'ExptRes.result3.r_expected',\n",
-       " 'ExptRes.result3.Width (GeV)',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result3.nll',\n",
-       " 'ExptRes.result3.nll_min',\n",
-       " 'ExptRes.result3.nll_SM',\n",
-       " 'ExptRes.result0.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result0.nll',\n",
-       " 'ExptRes.result0.nll_min',\n",
-       " 'ExptRes.result0.nll_SM',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result0.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result4.maxcond',\n",
-       " 'ExptRes.result4.theory prediction (fb)',\n",
-       " 'ExptRes.result4.upper limit (fb)',\n",
-       " 'ExptRes.result4.expected upper limit (fb)',\n",
-       " 'ExptRes.result4.TxNames',\n",
-       " 'ExptRes.result4.Mass (GeV)',\n",
-       " 'ExptRes.result4.AnalysisID',\n",
-       " 'ExptRes.result4.DataSetID',\n",
-       " 'ExptRes.result4.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result4.lumi (fb-1)',\n",
-       " 'ExptRes.result4.dataType',\n",
-       " 'ExptRes.result4.r',\n",
-       " 'ExptRes.result4.r_expected',\n",
-       " 'ExptRes.result4.Width (GeV)',\n",
-       " 'ExptRes.result4.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result4.nll',\n",
-       " 'ExptRes.result4.nll_min',\n",
-       " 'ExptRes.result4.nll_SM',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result5.maxcond',\n",
-       " 'ExptRes.result5.theory prediction (fb)',\n",
-       " 'ExptRes.result5.upper limit (fb)',\n",
-       " 'ExptRes.result5.expected upper limit (fb)',\n",
-       " 'ExptRes.result5.TxNames',\n",
-       " 'ExptRes.result5.Mass (GeV)',\n",
-       " 'ExptRes.result5.AnalysisID',\n",
-       " 'ExptRes.result5.DataSetID',\n",
-       " 'ExptRes.result5.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result5.lumi (fb-1)',\n",
-       " 'ExptRes.result5.dataType',\n",
-       " 'ExptRes.result5.r',\n",
-       " 'ExptRes.result5.r_expected',\n",
-       " 'ExptRes.result5.Width (GeV)',\n",
-       " 'ExptRes.result5.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result5.nll',\n",
-       " 'ExptRes.result5.nll_min',\n",
-       " 'ExptRes.result5.nll_SM',\n",
-       " 'ExptRes.result6.maxcond',\n",
-       " 'ExptRes.result6.theory prediction (fb)',\n",
-       " 'ExptRes.result6.upper limit (fb)',\n",
-       " 'ExptRes.result6.expected upper limit (fb)',\n",
-       " 'ExptRes.result6.TxNames',\n",
-       " 'ExptRes.result6.Mass (GeV)',\n",
-       " 'ExptRes.result6.AnalysisID',\n",
-       " 'ExptRes.result6.DataSetID',\n",
-       " 'ExptRes.result6.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result6.lumi (fb-1)',\n",
-       " 'ExptRes.result6.dataType',\n",
-       " 'ExptRes.result6.r',\n",
-       " 'ExptRes.result6.r_expected',\n",
-       " 'ExptRes.result6.Width (GeV)',\n",
-       " 'ExptRes.result6.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result6.nll',\n",
-       " 'ExptRes.result6.nll_min',\n",
-       " 'ExptRes.result6.nll_SM',\n",
-       " 'ExptRes.result6.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRV1jj',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRV1tt',\n",
-       " 'ExptRes.result7.maxcond',\n",
-       " 'ExptRes.result7.theory prediction (fb)',\n",
-       " 'ExptRes.result7.upper limit (fb)',\n",
-       " 'ExptRes.result7.expected upper limit (fb)',\n",
-       " 'ExptRes.result7.TxNames',\n",
-       " 'ExptRes.result7.Mass (GeV)',\n",
-       " 'ExptRes.result7.AnalysisID',\n",
-       " 'ExptRes.result7.DataSetID',\n",
-       " 'ExptRes.result7.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result7.lumi (fb-1)',\n",
-       " 'ExptRes.result7.dataType',\n",
-       " 'ExptRes.result7.r',\n",
-       " 'ExptRes.result7.r_expected',\n",
-       " 'ExptRes.result7.Width (GeV)',\n",
-       " 'ExptRes.result7.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result7.nll',\n",
-       " 'ExptRes.result7.nll_min',\n",
-       " 'ExptRes.result7.nll_SM',\n",
-       " 'ExptRes.result8.maxcond',\n",
-       " 'ExptRes.result8.theory prediction (fb)',\n",
-       " 'ExptRes.result8.upper limit (fb)',\n",
-       " 'ExptRes.result8.expected upper limit (fb)',\n",
-       " 'ExptRes.result8.TxNames',\n",
-       " 'ExptRes.result8.Mass (GeV)',\n",
-       " 'ExptRes.result8.AnalysisID',\n",
-       " 'ExptRes.result8.DataSetID',\n",
-       " 'ExptRes.result8.AnalysisSqrts (TeV)',\n",
-       " 'ExptRes.result8.lumi (fb-1)',\n",
-       " 'ExptRes.result8.dataType',\n",
-       " 'ExptRes.result8.r',\n",
-       " 'ExptRes.result8.r_expected',\n",
-       " 'ExptRes.result8.Width (GeV)',\n",
-       " 'ExptRes.result8.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRV1tt',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result5.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result7.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result0.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result4.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result4.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result4.TxNames weights (fb).TRV1jj',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRV1jj',\n",
-       " 'ExptRes.result7.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result8.TxNames weights (fb).TRV1',\n",
-       " 'ExptRes.result8.nll',\n",
-       " 'ExptRes.result8.nll_min',\n",
-       " 'ExptRes.result8.nll_SM',\n",
-       " 'ExptRes.result4.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result3.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result5.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result0.TxNames weights (fb).TRV1bb',\n",
-       " 'ExptRes.result6.TxNames weights (fb).TRV1qq',\n",
-       " 'ExptRes.result1.TxNames weights (fb).TRV1jj',\n",
-       " 'ExptRes.result2.TxNames weights (fb).TRV1tt',\n",
-       " 'ExptRes.result8.TxNames weights (fb).TRS1',\n",
-       " 'ExptRes.result5.TxNames weights (fb).TRS1']"
+       " 'totalxsec8TeV(fb)']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:56.016837Z",
@@ -411,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:56.104267Z",
@@ -452,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:56.162613Z",
@@ -477,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:56.195235Z",
@@ -493,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-08-27T14:36:56.221413Z",
@@ -600,7 +401,7 @@
        "     1.414214  3000  3000  3000  3000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,13 +409,6 @@
    "source": [
     "couplings.count()    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
